--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,9 @@ classifiers =
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
@@ -20,7 +23,7 @@ packages = find:
 include_package_data = True
 python_requires = ~=3.8
 install_requires =
-    jschon @ git+https://github.com/marksparkza/jschon.git@main
+    jschon
 
 [options.extras_require]
 dev =
