Add option to clear empty values from the translation output doc

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = jschon-translation
-version = 0.0.1
+version = 0.0.2
 description = JSON Schema-based JSON document translation
-long_description = file: README.rst, LICENSE
+long_description = file: README.rst
 long_description_content_type = text/x-rst
 url = https://github.com/marksparkza/jschon-translation
 author = Mark Jacobson
