--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = jschon-translation
-version = 0.1.0
+version = 0.1.1
 description = JSON Schema-based JSON document translation
 long_description = file: README.rst
 long_description_content_type = text/x-rst
@@ -24,7 +24,7 @@ packages = find:
 include_package_data = True
 python_requires = ~=3.8
 install_requires =
-    jschon
+    jschon>=0.11
 
 [options.extras_require]
 dev =
